2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release
        
2011-01-29  Brian Mattern

        Fix bug when you have an empty <Name></Name> in a menu

2011-01-30  Carsten Haitzler (The Rasterman)

        Fix tests to not build clearenv related code if not available

2011-01-31  Sebastian Dransfeld

	* Fix memleak, free cache icons after retrival

2011-01-31  Sebastian Dransfeld

	* Improve storage of desktop util data

2011-01-31  Sebastian Dransfeld

	* Add temporary memory cache of eet file data

2011-01-31  Sebastian Dransfeld

	* Always use icon cache, remove old code

2011-01-XX  Sebastian Dransfeld

	* Make check for stat return more explicit

2011-01-XX  Sebastian Dransfeld

	* Return EINA_{TRUE,FALSE} if return type is Eina_Bool

2011-01-XX  Sebastian Dransfeld

	* Return Eina_Bool if the return value of a function is true or false

2011-01-XX  Sebastian Dransfeld

	* Check whether dirs is NULL

2011-01-XX  Sebastian Dransfeld

	* Create internal struct for theme cache

2011-01-XX  Sebastian Dransfeld

	* Check if theme has changed when building cache

2011-01-XX  Sebastian Dransfeld

	* Prefix internal efreet cache keys with __

2011-01-XX  Sebastian Dransfeld

	* Create one cache file for each theme

2011-01-XX  Sebastian Dransfeld

	* Correct english